// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyPluginExecutorService smoke tests should run the plugin: { name: 'customer-io', plugin: [Object] } 1`] = `
[
  {
    "level": "debug",
    "message": "Executing plugin customer-io",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
  {
    "level": "info",
    "message": "Successfully authenticated with Customer.io. Completing setupPlugin.",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
  {
    "level": "debug",
    "message": "Detected email:, test@posthog.com",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
  {
    "level": "debug",
    "message": "{"status":{},"email":"test@posthog.com"}",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
  {
    "level": "debug",
    "message": "Should customer be tracked:, true",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
  {
    "level": "debug",
    "message": "Execution successful",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the plugin: { name: 'intercom', plugin: [Object] } 1`] = `
[
  {
    "level": "debug",
    "message": "Executing plugin intercom",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
  {
    "level": "info",
    "message": "Contact test@posthog.com in Intercom not found",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
  {
    "level": "debug",
    "message": "Execution successful",
    "timestamp": "2025-01-01T01:00:00.000+01:00",
  },
]
`;
